...
            TopAppBar(
                title = { Text(text = "The 10 Wonders") },
            )
        }
    ) { contentPadding ->
        LazyColumn(
            modifier = Modifier.padding(contentPadding).testTag("lazy_list"),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            contentPadding = PaddingValues(16.dp)
        ) {
            items(items = wonders, key = { it.id }) {
                ItemWonder(
...
