...
    modifier: Modifier = Modifier,
) {
    val navBackStackEntry by navController.currentBackStackEntryAsState()
    val currentRoute = navBackStackEntry?.destination?.route
    val items = listOf(
        BottomNavigationItem(
            title = "Home",
            screen = Screen.Home,
            activeIcon = Icons.Rounded.Home,
            inactiveIcon = Icons.Outlined.Home,
            contentDescription = "home_page"
        ),
        BottomNavigationItem(
...
